syntax = "proto3";

package store;

// Сообщение для передачи файла
message ProductFile {
    bytes file_data = 1; // Данные файла
    string file_name = 2; // Название файла
}

// Сообщение для запроса
message StoreRequest {
    string store_name = 1; // Название магазина
    repeated ProductFile product_files = 2; // Массив файлов
}

// Сообщение для ответа
message StoreResponse {
    int32 evaluation = 1; // Оценка (0 или 1)
}

// Определение сервиса
service StoreService {
    rpc EvaluateStore(StoreRequest) returns (StoreResponse);
}
